# aptator

./: .gitignore  LICENSE  README.md  aptator.py  aptator.toml.example  pyproject.toml
src/aptator/: __init__.py  cli.py  state.py  tools.py
src/aptator/actions/: deb.py  download_extract_and_link.py  exec.py  extract_and_link.py  tar_extraction_filter.py
src/aptator/process/: install_deb.py
src/aptator/source/: __init__.py  github.py
